# statistical-agent-skills

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  FINDINGS.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/src/statskills_api/: __init__.py  app.py  jobs.py  service.py  stream.py
apps/api/tests/: conftest.py  test_app.py  test_imports.py  test_service.py  test_stream.py
apps/web/: .prettierrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.svelte  app.css  main.ts
apps/web/src/components/: ReportView.svelte  RunForm.svelte  StepStream.svelte
apps/web/src/lib/: api.test.ts  api.ts  types.ts
configs/: dabench_ollama.yaml  dabench_ollama_skills.yaml  slice.yaml  slice_ollama.yaml  trap_ollama.yaml  trap_ollama_skills.yaml
configs/experiments/: _trap_base.yaml  disclosure_grid.yaml  dose_regression_haiku.yaml  dose_traps_haiku.yaml  engagement_grid.yaml  haiku_grid.yaml  model_axis_regression.yaml  model_axis_traps.yaml  regression_haiku_grid.yaml  trap_14b.yaml  trap_14b_agentic.yaml  trap_14b_l1.yaml  trap_14b_l2.yaml  trap_7b.yaml  trap_7b_agentic.yaml  trap_7b_l1.yaml  trap_7b_l2.yaml  trap_haiku.yaml  trap_haiku_agentic.yaml  trap_haiku_l1.yaml  trap_regression_haiku.yaml  trap_regression_sonnet.yaml  trap_sonnet.yaml
data/authored/: groups.csv  reg_confounding.csv  reg_heteroskedasticity.csv  reg_influence.csv  reg_nonlinearity.csv  sales.csv  trap_chi2.csv  trap_correlation.csv  trap_mc.csv  trap_mwu.csv  trap_paired.csv  trap_welch.csv
scripts/: _paths.py  compare.py  fetch_dabench.py  gen_authored_data.py  grade.py  report.py  run.py  run_experiment.py  run_matrix.py  run_slice.py
src/statskills/: __init__.py
src/statskills/agent/: __init__.py  action.py  anthropic_client.py  context.py  llm.py  loop.py  prompts.py  trajectory.py
src/statskills/core/: __init__.py  provenance.py  registry.py  retry.py  types.py
src/statskills/core/config/: __init__.py  errors.py  loading.py
src/statskills/evaluation/: __init__.py  _deferred.py  compare.py  engagement.py  grading.py  metrics.py  results.py  runs.py  trials.py  verifiers.py
src/statskills/experiments/: __init__.py  matrix.py  runner.py
src/statskills/reporting/: __init__.py  compose.py  evidence.py  figures.py  render.py  schema.py  verify.py
src/statskills/sandbox/: Dockerfile  __init__.py  base.py  docker.py  driver.py  local.py  requirements.txt  session.py
src/statskills/skills/: __init__.py  context.py  library.py  loader.py  parser.py  schema.py
src/statskills/skills/router/: __init__.py  forced.py  relevant.py
src/statskills/tasks/: __init__.py  loader.py  schema.py
src/statskills/tasks/adapters/: __init__.py  dabench.py
src/statskills/tasks/authored/: __init__.py  regression_trap_tasks.py  slice_tasks.py  trap_tasks.py
tests/: test_action.py  test_anthropic.py  test_compare.py  test_config_loading.py  test_dabench.py  test_engagement.py  test_grading.py  test_llm.py  test_llm_ollama.py  test_loader.py  test_loop.py  test_matrix.py  test_metrics.py  test_provenance.py  test_registry.py  test_regression_trap_tasks.py  test_reporting.py  test_retry.py  test_runner.py  test_runs.py  test_sandbox.py  test_sandbox_docker.py  test_skill_context.py  test_skill_loader.py  test_skill_parser.py  test_skill_router.py  test_tasks.py  test_trap_tasks.py  test_trials.py  test_verifiers.py
tests/fixtures/skills/another-skill/: SKILL.md
tests/fixtures/skills/sample-skill/: SKILL.md
tests/fixtures/skills/sample-skill/scripts/: helper.py
