[project]
name = "statistical-agent-skills"
version = "0.1.0"
description = "Experiment harness studying whether curated agent skills improve LLM performance on inferential-statistics data-analysis tasks."
readme = "README.md"
authors = [
    { name = "LoganSelner", email = "loganselner@gmail.com" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic>=2,<3",       # Config models + per-component params validation
    "pyyaml>=6.0",          # YAML configs with `extends:` inheritance
    "python-dotenv>=1.0",   # Load EDENAI_API_KEY etc. from .env at the app boundary
    "tenacity>=8",          # Transient-failure retry policy for external calls
    "rich>=13",             # Readable CLI / log output
]
# The scientific stack (numpy/scipy/pandas/statsmodels), the `openai` SDK (EdenAI
# gateway), and the sandbox dependency are added in Phase 1+ alongside the modules
# that use them, so each phase's dependencies are justified by its code.

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pre-commit",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/statskills"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["statskills"]
combine-as-imports = true
force-sort-within-sections = true

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
mypy_path = ["src"]
files = ["src", "tests"]
explicit_package_bases = true

# Tests are type-checked too, but with the strict flags that fight pytest idioms
# (mocks, monkeypatch, fixtures) relaxed: bodies are still checked while a
# contributor isn't forced to annotate every quick test.
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = true
warn_unreachable = false

[tool.pytest.ini_options]
addopts = "-q -ra --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests that do heavy computation (deselect with '-m \"not slow\"')",
    "requires_api: marks tests that need external API access (EdenAI)",
]
