[project]
name = "statistical-agent-skills"
version = "0.1.0"
description = "Experiment harness studying whether curated agent skills improve LLM performance on inferential-statistics data-analysis tasks."
readme = "README.md"
authors = [
    { name = "LoganSelner", email = "loganselner@gmail.com" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic>=2,<3",       # Config models + per-component params validation
    "pyyaml>=6.0",          # YAML configs with `extends:` inheritance
    "python-dotenv>=1.0",   # Load EDENAI_API_KEY etc. from .env at the app boundary
    "tenacity>=8",          # Transient-failure retry policy for external calls
    "rich>=13",             # Readable CLI / log output
    "openai>=1.0",          # EdenAI gateway via the OpenAI-compatible /v3 endpoint
    "anthropic>=0.40",      # Native Anthropic SDK for the Claude (frontier) provider
]
# The scientific stack (numpy/scipy/pandas/statsmodels) is deliberately NOT a harness
# runtime dependency: model-generated analysis code runs inside the sandbox, so those
# libs are pinned in the sandbox image (its digest -> provenance). They appear in the
# `dev` group only so the local test executor can run that code without Docker.

[project.optional-dependencies]
# Deliverable-track figure generation (reporting/figures.py) — residual/QQ/leverage plots
# for a report. Lazily imported, so the research harness stays light: the scientific stack
# is still NOT a core runtime dep (see above). Enable with `uv sync --extra reporting`.
reporting = [
    "matplotlib>=3.8",
    "numpy>=2",
    "pandas>=2",
    "statsmodels>=0.14",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pre-commit",
    "types-pyyaml>=6.0.12.20250915",
    # Local-executor / sandbox-parity stack — lets `LocalExecutor` run the agent's
    # analysis code in-process for tests. The production `DockerExecutor` ignores
    # these and uses the pinned versions baked into the sandbox image instead.
    "ipython>=8",
    "numpy>=2",
    "pandas>=2",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "matplotlib>=3.8",      # reporting/figures.py diagnostics (also the `reporting` extra)
    "pyarrow>=16",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/statskills"]

# The deliverable-track web backend (apps/api) is a workspace MEMBER, not a core
# dependency: the dependency points inward (api -> statskills), never the reverse. Because
# the root project does not depend on the member, a plain `uv sync` installs the core +
# dev only — FastAPI never enters the harness env (the §11/§14 boundary; the core CI job
# proves the harness runs web-dep-free). `uv sync --all-packages` adds apps/api for dev.
[tool.uv.workspace]
members = ["apps/api"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["statskills"]
combine-as-imports = true
force-sort-within-sections = true

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
mypy_path = ["src"]
files = ["src", "tests"]
explicit_package_bases = true

# Tests are type-checked too, but with the strict flags that fight pytest idioms
# (mocks, monkeypatch, fixtures) relaxed: bodies are still checked while a
# contributor isn't forced to annotate every quick test.
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = true
warn_unreachable = false

# IPython (used only by the self-contained sandbox driver) ships no type stubs.
[[tool.mypy.overrides]]
module = ["IPython.*"]
ignore_missing_imports = true

# The scientific stack ships incomplete or no type stubs; it is used only in tests and
# scripts (the agent runs it inside the sandbox, not the harness).
[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "scipy", "scipy.*", "statsmodels", "statsmodels.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q -ra --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests that do heavy computation (deselect with '-m \"not slow\"')",
    "requires_api: marks tests that need external API access (EdenAI)",
]
